--- a/PhoneTest_4_30/app/src/main/res/values/strings.xml
+++ b/PhoneTest_4_30/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PhoneTest</string>
+    <string name="app_name">Vr Presence CSCE 462</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
